<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:orientation="vertical"
    tools:context="be.ac.uclouvain.menuz.MultiColPaginatedMenuActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <Button
            android:id="@+id/id_item1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="32dp"
            android:background="@color/colorButton"
            android:onClick="selectionPerformed"
            android:text="@string/color_silver"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/id_item2"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/id_item2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="32dp"
            android:background="@color/colorButton"
            android:onClick="selectionPerformed"
            android:text="@string/color_white"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/id_item1"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/id_item3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorButton"
            android:onClick="selectionPerformed"
            android:text="@string/color_blue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/id_item4"
            app:layout_constraintTop_toBottomOf="@+id/id_item1" />

        <Button
            android:id="@+id/id_item4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorButton"
            android:onClick="selectionPerformed"
            android:text="@string/color_bordeaux"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/id_item3"
            app:layout_constraintTop_toBottomOf="@+id/id_item2"/>

        <Button
            android:id="@+id/id_item5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorButton"
            android:onClick="selectionPerformed"
            android:text="@string/color_brown"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/id_item6"
            app:layout_constraintTop_toBottomOf="@+id/id_item3" />

        <Button
            android:id="@+id/id_item6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorButton"
            android:onClick="selectionPerformed"
            android:text="@string/color_grey"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/id_item5"
            app:layout_constraintTop_toBottomOf="@+id/id_item4"/>

        <Button
            android:id="@+id/id_item7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorButton"
            android:onClick="selectionPerformed"
            android:text="@string/color_indigo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/id_item8"
            app:layout_constraintTop_toBottomOf="@+id/id_item5" />

        <Button
            android:id="@+id/id_item8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorButton"
            android:onClick="selectionPerformed"
            android:text="@string/color_yellow"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/id_item7"
            app:layout_constraintTop_toBottomOf="@+id/id_item6"/>

        <Button
            android:id="@+id/id_item_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:onClick="previousProposals"
            android:text="@string/id_previous"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="@+id/id_item7"
            app:layout_constraintTop_toBottomOf="@+id/id_item7" />

        <Button
            android:id="@+id/id_item_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:onClick="nextProposals"
            android:text="@string/id_next"
            android:textColor="@android:color/white"
            app:layout_constraintRight_toRightOf="@+id/id_item8"
            app:layout_constraintTop_toBottomOf="@+id/id_item8" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>
